Make sure the home page image shows the car lights on all screens (align right and bottom)

--- a/client/style/index.css
+++ b/client/style/index.css
@@ -209,6 +209,7 @@ a.menu-item.footer.active {
 }
 .hero.home {
     background-image: url('/images/hero-bg-home.jpg');
+    background-position: right bottom;
 }
 .hero.approach {
     background-image: url('/images/hero-bg-approach.jpg');
